--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "danted-charts.fullname" . }}
+  name: {{ include "danted.fullname" . }}
   labels:
-    {{- include "danted-charts.labels" . | nindent 4 }}
+    {{- include "danted.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "danted-charts.selectorLabels" . | nindent 4 }}
+    {{- include "danted.selectorLabels" . | nindent 4 }}
