--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "danted-charts.serviceAccountName" . }}
+  name: {{ include "danted.serviceAccountName" . }}
   labels:
-    {{- include "danted-charts.labels" . | nindent 4 }}
+    {{- include "danted.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
