--- a/values.yaml
+++ b/values.yaml
@@ -1,4 +1,4 @@
-# Default values for danted-charts.
+# Default values for danted.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
