--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -8,8 +8,8 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: ss5
       protocol: TCP
-      name: http
+      name: ss5
   selector:
     {{- include "danted.selectorLabels" . | nindent 4 }}
