--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,7 +1,13 @@
 apiVersion: v2
 name: danted
-description: A Helm chart for Kubernetes
+description: Dante - A free SOCKS server
 
+home: https://www.inet.no/dante/
+icon: https://www.inet.no/inet_dante.png
+
+sources:
+  - https://github.com/Lozy/danted
+  - https://github.com/yutianaiqingtian/danted-charts
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
@@ -21,4 +27,4 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.16.0"
+appVersion: "1.4.2"
