--- a/values.yaml
+++ b/values.yaml
@@ -37,6 +37,7 @@ securityContext: {}
   # runAsUser: 1000
 
 env:
+  # -- auth user for socket5 server connection
   auth:
     - user: "sockd"
       pass: "sockd"
